Updated packages; Added description and title to documentation pages' model; Added new RSS formats

--- a/_docs/category/intro.mdx
+++ b/_docs/category/intro.mdx
@@ -1,5 +1,7 @@
 ---
-title: Intro
+title: Lorem ipsum dolor sit amet
+label: Lorem ipsum dolor sit amet
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit
 position: 0
 ---
 
