Added Stripe tests (#3)
* Added Stripe tests

* Added async payment test(to be finished)

* Added some missing configuration details

* Added test env, improved flaky tests

--- a/public/locales/en/subscription.json
+++ b/public/locales/en/subscription.json
@@ -7,5 +7,6 @@
   "subscriptionWillEndOn": "The subscription will end on {{ endDate }}",
   "unknownErrorAlert": "An unknown error happened. Please try again or contact support.",
   "checkOutCanceledAlert": "The checkout was canceled",
-  "checkOutCompletedAlert": "Well done! The checkout was successfully completed"
+  "checkOutCompletedAlert": "Well done! The checkout was successfully completed",
+  "awaitingPaymentAlert": "We are awaiting for the payment to go through."
 }
