--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,5 @@
 {
-  "generalTab": "General",
+  "generalTab": "My Details",
   "emailTab": "Email",
   "passwordTab": "Password",
   "updateProfileSuccess": "Profile successfully updated",
