- Improved E2E resiliency - Added scripts for CI tests - Added more comments - Fixed issue with Storage group rules - Fixed session expiration synchronization with server-side session - Default layout to be Sidebar - Added MJML email for inviting members to an organization - Added MJML email when a payment fails - Updated packages - Updated Stripe API version - Added error 500 page - Extracted Ethereal Testing account

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "dashboardTabLabel": "Dashboard",
   "organizationSettingsTabLabel": "Organization",
   "settingsTabLabel": "Settings",
-  "profileSettingsTabLabel": "My Details",
+  "profileSettingsTabLabel": "Profile",
   "subscriptionSettingsTabLabel": "Subscription",
   "emailAddress": "Email Address",
   "password": "Password",
