--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -10,6 +10,9 @@
   "signUpToAcceptInvite": "Please sign in/up to accept the invite",
   "clickToAcceptAs": "Click the button below to accept the invite with as <b>{{email}}</b>",
   "acceptInvite": "Accept invite",
+  "acceptingInvite": "Accepting Invite...",
+  "acceptInviteSuccess": "Invite successfully accepted",
+  "acceptInviteError": "Error encountered while accepting invite",
   "acceptInviteWithDifferentAccount": "Want to accept the invite with a different account?",
   "alreadyHaveAccountStatement": "I already have an account, I want to sign in instead",
   "doNotHaveAccountStatement": "I do not have an account, I want to sign up instead",
