- Remove authentication cookies when session cookie is not verified (stale client cookies) (#26)
- Improved settings UX
- Updated Button component UX
- Updated packages
- Added "Layout" component to RouteShell component

--- a/public/locales/en/organization.json
+++ b/public/locales/en/organization.json
@@ -45,7 +45,7 @@
   "organizationLogoInputLabel": "Organization Logo",
   "updateOrganizationSubmitLabel": "Update Organization",
   "inviteMembersPageHeading": "Invite Members",
-  "goBackToMembersPage": "Go back",
+  "goBackToMembersPage": "Go back to members",
   "membersPageHeading": "Members",
   "inviteMembersButtonLabel": "Invite Members",
   "pendingInvitesHeading": "Pending Invites",
