- Renamed withMiddleware to withPipe not to confuse it with Next.js middlewares (#27)
- exceptions built with "buildException" factory will now throw an ApiError Error instead of using "res"

--- a/public/locales/en/organization.json
+++ b/public/locales/en/organization.json
@@ -51,6 +51,7 @@
   "pendingInvitesHeading": "Pending Invites",
   "noPendingInvites": "No pending invites found",
   "loadingMembers": "Loading members...",
+  "loadMembersError": "Sorry, we couldn't fetch your organization's members.",
   "loadingInvitedMembers": "Loading invited members...",
   "invitedBadge": "Invited",
   "duplicateInviteEmailError": "You have already entered this email address",
