- Better design for Alert component (#30)
* - Better design for Alert component
- Fixed weird issue where the Profile page was rendered twice?
- Added Alert component as a wapper of the AuthErrorMessage component
- Added missing translations

* - Bumped up packages and version

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -2,6 +2,8 @@
   "signUp": "Sign Up",
   "signIn": "Sign In",
   "signOut": "Sign out",
+  "signingIn": "Signing in...",
+  "signingUp": "Signing up...",
   "orContinueWithEmail": "or continue with email",
   "doNotHaveAccountYet": "Do not have an account yet?",
   "alreadyHaveAnAccount": "Already have an account?",
