Added Email Link Authentication v0.1.0 (#31)
* Added Email Link Authentication

* Set an error state when for some reason we cannot sign in using an email link

* Fix Meta in documentation's pages

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -25,6 +25,11 @@
   "passwordResetSubheading": "Enter your email address below. You will receive a link to reset your password.",
   "passwordResetSuccessMessage": "Check your Inbox! We emailed you a link for resetting your Password.",
   "passwordResetSignInLink": "Password recovered? Sign in",
+  "sendEmailLink": "Send Email Link",
+  "sendingEmailLink": "Sending Email Link...",
+  "sendLinkSuccess": "We sent you a link to your email! Follow the link to sign in.",
+  "sendLinkSuccessToast": "Link successfully sent",
+  "getNewLink": "Get a new link",
   "errors": {
     "auth/wrong-password": "The credentials entered are incorrect",
     "auth/user-disabled": "Your account has been disabled. Please contact Support.",
@@ -35,6 +40,9 @@
     "auth/email-already-in-use": "This email is already in use. Please try with another one",
     "auth/popup-closed-by-user": "The popup was closed",
     "auth/cancelled-popup-request": "The request was cancelled. Please try again.",
-    "default": "Email or Password are invalid. Please try again"
+    "auth/invalid-action-code": "Invalid action code",
+    "default": "Email or Password are invalid. Please try again",
+    "generic": "Sorry, we weren't able to authenticate you. Please try again.",
+    "link": "Sorry, we encountered an error while sending your link. Please try again."
   }
 }
