- Added "Transfer Ownership" functionality (#33)
- Added more checks when changing an user's permissions
- Refactored exceptions as they no longer need access to the response object
- Added more E2E tests

--- a/public/locales/en/organization.json
+++ b/public/locales/en/organization.json
@@ -31,11 +31,16 @@
   "updateMemberRoleModalHeading": "Update Member's Role",
   "memberRoleInputLabel": "Member role",
   "updateRoleSubmitLabel": "Update Role",
+  "transferOwnership": "Transfer Ownership",
   "deleteInviteModalHeading": "Deleting Invite",
   "deleteInviteSuccessMessage": "Invite deleted successfully",
   "deleteInviteErrorMessage": "Invite not deleted. Please try again.",
   "deleteInviteLoadingMessage": "Deleting invite. Please wait...",
   "confirmDeletingMemberInvite": "You are deleting the invite to <b>{{ email }}</b>",
+  "transferOwnershipDisclaimer": "You are transferring ownership of the selected organization to <b>{{ member }}</b>. Your new role will be <b>$t(common:roles.admin.label)</b>.",
+  "transferringOwnership": "Transferring ownership...",
+  "transferOwnershipSuccess": "Ownership successfully transferred",
+  "transferOwnershipError": "Sorry, we could not transfer ownership to the selected member. Please try again.",
   "deleteInviteSubmitLabel": "Delete Invite",
   "youBadgeLabel": "You",
   "updateOrganizationLoadingMessage": "Updating Organization...",
