--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -20,6 +20,9 @@
   "doNotHaveAccountStatement": "I do not have an account, I want to sign up instead",
   "addingToOrganization": "We are adding you to <b>{{name}}</b>. Please Wait...",
   "signInWithProvider": "Sign in with {{provider}}",
+  "passwordHint": "Please ensure to enter at least 6 characters",
+  "repeatPassword": "Repeat password",
+  "passwordsDoNotMatch": "The passwords do not match",
   "passwordForgottenQuestion": "Password forgotten?",
   "passwordResetLabel": "Reset Password",
   "passwordResetSubheading": "Enter your email address below. You will receive a link to reset your password.",
