--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,6 +1,9 @@
 {
+  "signUpHeading": "Create an account",
   "signUp": "Sign Up",
+  "signInHeading": "Sign in to your account",
   "signIn": "Sign In",
+  "getStarted": "Get started",
   "signOut": "Sign out",
   "signingIn": "Signing in...",
   "signingUp": "Signing up...",
@@ -20,14 +23,16 @@
   "doNotHaveAccountStatement": "I do not have an account, I want to sign up instead",
   "addingToOrganization": "We are adding you to <b>{{name}}</b>. Please Wait...",
   "signInWithProvider": "Sign in with {{provider}}",
+  "signInWithPhoneNumber": "Sign in with Phone Number",
   "passwordHint": "Please ensure to enter at least 6 characters",
+  "repeatPasswordHint": "Type your password again. Please ensure the passwords match",
   "repeatPassword": "Repeat password",
   "passwordsDoNotMatch": "The passwords do not match",
   "passwordForgottenQuestion": "Password forgotten?",
   "passwordResetLabel": "Reset Password",
   "passwordResetSubheading": "Enter your email address below. You will receive a link to reset your password.",
   "passwordResetSuccessMessage": "Check your Inbox! We emailed you a link for resetting your Password.",
-  "passwordResetSignInLink": "Password recovered? Sign in",
+  "passwordRecoveredQuestion": "Password recovered?",
   "sendEmailLink": "Send Email Link",
   "sendingEmailLink": "Sending Email Link...",
   "sendLinkSuccess": "We sent you a link to your email! Follow the link to sign in.",
@@ -65,6 +70,9 @@
     "auth/invalid-custom-token": "The custom token format is incorrect. Please check the documentation.",
     "auth/code-expired": "The SMS code has expired. Please re-send the verification code to try again.",
     "auth/no-auth-event": "Sorry, an internal error has occurred. Please try again",
+    "auth/provider-already-linked": "This provider has already been linked to your account.",
+    "auth/missing-email": "Sorry, we haven't found an email address connected to your account",
+    "auth/unsupported-first-factor": "Signing in with a multi-factor account requires sign-in with a supported first factor.",
     "default": "Email or Password are invalid. Please try again",
     "generic": "Sorry, we weren't able to authenticate you. Please try again.",
     "link": "Sorry, we encountered an error while sending your link. Please try again."
