--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -16,7 +16,7 @@
   "updatePasswordLoading": "Updating password...",
   "updateProfileLoading": "Updating profile...",
   "displayNameLabel": "Your Name",
-  "emailLabel": "Your Email Address",
+  "emailLabel": "Email Address",
   "profilePictureLabel": "Your Photo",
   "updateProfileSubmitLabel": "Update Profile",
   "currentPassword": "Current Password",
@@ -26,7 +26,7 @@
   "updatePasswordSubmitLabel": "Update Password",
   "newEmail": "Your New Email",
   "repeatEmail": "Repeat Email",
-  "updateEmailSubmitLabel": "Update Email",
+  "updateEmailSubmitLabel": "Update Email Address",
   "updateEmailSuccess": "Email successfully updated",
   "updateEmailLoading": "Updating your email...",
   "updateEmailError": "Email not updated. Please try again",
@@ -58,11 +58,18 @@
   "mfaEnabledSuccessTitle": "Multi-Factor authentication is enabled",
   "mfaEnabledSuccessDescription": "Congratulations! You have successfully enrolled in the multi factor authentication process. You will now be able to access your account with a combination of your password and an authentication code sent to your phone number.",
   "mfaActivationLoading": "Activating Multi-Factor...",
-  "mfaActivationError": "Sorry, we weren't able to verify the code provided",
+  "verificationCodeError": "Sorry, we weren't able to verify the code provided",
+  "verificationCodeSuccess": "Code successfully verified!",
+  "verificationCodeLoading": "Verifying code...",
   "verifyPhoneNumberSubmitLabel": "Verify Phone Number",
   "verifyActivationCodeSubmitLabel": "Enter Verification Code",
   "verificationCode": "Verification Code",
+  "addEmailAddress": "Add Email address",
   "phoneNumberLabel": "Phone Number",
+  "addPhoneNumber": "Add Phone Number",
+  "removePhoneNumber": "Remove Phone Number",
+  "confirmRemovePhoneNumber": "Yes, remove this phone number",
+  "confirmRemovePhoneNumberDescription": "You are about to remove your phone number.",
   "verifyPhoneNumberDescription": "Enter your Phone Number. We will send you a verification code by SMS.",
   "verifyActivationCodeDescription": "Enter the verification code we sent you by SMS",
   "mfaEnabledSuccessAlert": "Multi-Factor authentication is enabled",
@@ -80,5 +87,6 @@
   "verificationLinkAlertDescription": "Your email is not yet verified. Please verify your email to be able to set up Multi-Factor Authentication.",
   "authFactorName": "Factor Name (optional)",
   "authFactorNameHint": "Assign a name that helps you remember the phone number used",
-  "loadingUser": "Loading user details. Please wait..."
+  "loadingUser": "Loading user details. Please wait...",
+  "linkPhoneNumber": "Link Phone Number"
 }
