--- a/_posts/why-makerkit.mdx
+++ b/_posts/why-makerkit.mdx
@@ -7,6 +7,39 @@ excerpt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo
 coverImage: '/assets/images/posts/lorem-ipsum.webp'
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+## Fecerat avis invenio mentis
 
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+Lorem markdownum signis vidi quisquis saepe inani inter animam laceras nequiquam
+castos cumque dum poste pede, **soliti et** eras. Cornua utendum. Ne dignus
+opacae? Moles percussis, redimitus equi quercus haurit perque *aras*; humo!
+Digessit Famemque membris vestrum [sua adveniens](http://erit.net/luctus.php)
+deserta, et me cum cum dicuntur et ignes.
+
+    var xmp_duplex = boolean + alu_unmount_tween - newline;
+    var matrix_http_plain = facebook;
+    rom = risc_flops + market + 2 + reimage_c_mca;
+
+## Parilesque duae meritis
+
+Suum spes medio faciunt miserarum artisque. Honor amplectique crescunt saepius
+cavis esse saepe laetabile modo. Fontis relinquit titulum est victa mundi!
+
+## Orbem dare
+
+More cingo concipit cumque armenta. Secuta quare profundi damni erigimur effugit
+facta ipsa, videt videt. Conantem et **campos animos usquam** ut munus erat
+audito, e!
+
+> Talia ponit corpora Philemon. Volant pone dicta, fugerent hanc; trahunt plus
+> **cinxit agendo**, Sedit, animum, molli spargere. Perterrita et bella Tiresia
+> tanta auctor, colatur **nigro** externa. Stamina nunc bis *longeque* cornua.
+
+## Cantat sequentes et illi opertos Cycno
+
+Per inque Pallade cuspide errabat. Est dolor excitus ultorem avertere, numero et
+Minos pater flamine, ictu tune Phylius.
+
+Ditem est qui Scythicis erubuit suae, qui nunc tacito aequare auras. Suas erat
+cubitoque esse, volventem quae, fera tinxi villo ita. Addit hic sine at orbe ut
+sanesque intravit pudore nullisque Canens, ait aut. Parabat Pittheia Pan cibus
+et perque inquit grave suae coniunx cura matris undaeque et stagni et.
