--- a/public/locales/en/organization.json
+++ b/public/locales/en/organization.json
@@ -10,7 +10,7 @@
   "createOrganizationError": "Organization not created. Please try again.",
   "createOrganizationLoading": "Creating organization...",
   "settingsPageLabel": "General",
-  "createOrganizationDropdownLabel": "Create New",
+  "createOrganizationDropdownLabel": "New organization",
   "changeRole": "Change Role",
   "removeMember": "Remove",
   "inviteMembersSuccess": "Members invited successfully!",
@@ -18,7 +18,7 @@
   "inviteMembersLoading": "Inviting members...",
   "removeInviteButtonLabel": "Remove invite",
   "addAnotherMemberButtonLabel": "Add another one",
-  "inviteMembersSubmitLabel": "Invite Members",
+  "inviteMembersSubmitLabel": "Send Invites",
   "removeMemberModalHeading": "You are removing this user",
   "removeMemberSuccessMessage": "Member removed successfully",
   "removeMemberErrorMessage": "Sorry, we encountered an error. Please try again",
