--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -50,7 +50,7 @@
   "connectWithProvider": "Connect with {{ provider }}",
   "connectedWithProvider": "Connected with {{ provider }}",
   "setupMfaButtonLabel": "Setup Multi-Factor Authentication",
-  "multiFactorAuthHeading": "Secure your account with Multi-Factor Authentication.",
+  "multiFactorAuthHeading": "Secure your account with Multi-Factor Authentication",
   "multiFactorAuthDescription": "Enable Multi-Factor Authentication to verify your identity for an extra layer of security to your account in case your password is stolen. In addition to entering your password, it requires you confirm your identity via SMS.",
   "verifyPhoneNumberLoading": "Verifying phone number...",
   "verifyPhoneNumberSuccess": "Phone number successfully verified",
@@ -84,6 +84,7 @@
   "sendEmailVerificationLinkError": "Sorry, we weren't able to send you the email",
   "sendVerificationLinkSubmitLabel": "Send Verification Link",
   "sendVerificationLinkSuccessLabel": "Email sent! Check your Inbox",
+  "verifyEmailAlertHeading": "Please verify your email to enable MFA",
   "verificationLinkAlertDescription": "Your email is not yet verified. Please verify your email to be able to set up Multi-Factor Authentication.",
   "authFactorName": "Factor Name (optional)",
   "authFactorNameHint": "Assign a name that helps you remember the phone number used",
