--- a/public/locales/en/organization.json
+++ b/public/locales/en/organization.json
@@ -1,8 +1,10 @@
 {
   "generalTabLabel": "General",
+  "generalTabLabelSubheading": "Manage your Organization",
   "membersTabLabel": "Members",
   "emailSettingsTab": "Email",
-  "passwordSettingsTab": "Password",
+  "membersTabSubheading": "Manage and Invite members",
+  "inviteMembersPageSubheading": "Invite members to your organization",
   "createOrganizationModalHeading": "Create Organization",
   "organizationNameLabel": "Organization Name",
   "createOrganizationSubmitLabel": "Create Organization",
@@ -54,6 +56,7 @@
   "membersPageHeading": "Members",
   "inviteMembersButtonLabel": "Invite Members",
   "pendingInvitesHeading": "Pending Invites",
+  "pendingInvitesSubheading": "Manage invites not yet accepted",
   "noPendingInvites": "No pending invites found",
   "loadingMembers": "Loading members...",
   "loadMembersError": "Sorry, we couldn't fetch your organization's members.",
