--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,11 +1,16 @@
 {
   "generalTab": "My Details",
+  "generalTabSubheading": "Manage your profile details",
   "emailTab": "Email",
+  "emailTabTabSubheading": "Update your email address",
   "passwordTab": "Password",
-  "manageConnectedAccounts": "Manage Connected Accounts",
+  "passwordTabSubheading": "Update your password",
+  "manageConnectedAccounts": "Connected Accounts",
+  "manageConnectedAccountsSubheading": "Manage your connected accounts",
   "connectedAccounts": "Connected Accounts",
   "authenticationTab": "Authentication",
   "multiFactorAuth": "Multi-Factor Authentication",
+  "multiFactorAuthSubheading": "Set up MFA via SMS",
   "connectedAccountsSubheading": "Below are the accounts linked to your profile",
   "availableProviders": "Available Providers",
   "availableProvidersSubheading": "Click on the providers below to link your profile to the provider",
