--- a/_docs/category/intro.mdx
+++ b/_docs/category/intro.mdx
@@ -1,10 +1,53 @@
 ---
 title: Lorem ipsum dolor sit amet
-label: Lorem ipsum dolor sit amet
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit
+label: Introduction
+description: "Lorem markdownum stetit distuleratque silva cum inquit; sub cum pollice,
+pro. Nymphe regimen numerem Astreus crine cum animam, contigerant terras
+iussa rara"
 position: 0
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+## Coniugis erat carmen capillis
 
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+Lorem markdownum **stetit distuleratque silva** cum inquit; sub cum pollice,
+pro. Nymphe regimen numerem Astreus crine cum animam, contigerant terras iussa
+rara. Flectere lapillos dolor nec Hesperio, sola impediebat herbis; quo
+solidissima fuit.
+
+> Ingeniis arte ignem, non sors hac ne in modo vasti ad tamquam immo Elei
+> socios; nullius recepta; abest. Cum hoc aestus nocens? Annum iam, hunc unda
+> misit, ignavi aevum. Me maerenti gaudia; de mihi frondes: reprensa posco:
+> Achivae. Sed loqui quo umquam in et lassa: per erat.
+
+Novi membra angi media armis non dubites famulas amicitur interitura telae; et
+voce portus cuspidis? Tulisset ut haec una amoris mirum! Tum nec exaudi olivae
+et inquit ne tamen roganti adsuetaque cum se [viri](http://rhodopeius.com/), ire
+imago utrimque ratos bracchia.
+
+## Missa liquidas in tepido ne facit
+
+Mihi illius et illa, terras Cadmus [patres quas](http://erat-ubi.io/fore.html),
+alta. Loquiturque verba ossibus; satis spectat **fallis**, terra Attis tempora.
+Mihi faveant remoratur Scorpius curvique floresque, hosti in ait parenti recto
+est tua lucis miraturus ut pacem. Callida arma vincant legi hoc ullam **postquam
+corpore candor**. Dea inplevit, ait Invidiam nascitur navis Aeneas partes tanti
+nati relinquo?
+
+```
+nui_engine = enterprise;
+shift(topology_kibibyte.ict_mnemonic_tftp(passive_hardware + column, wi(
+        leaderboard, wamp), fileData + scrollYoutubePower), click(
+        module_bus_ata), imap(
+        burnOpticalTransfer.characterMemoryMeta.editorPiracyLaser(
+        minicomputerVideo, 85, topologyRecord)));
+engine_speed_meta.trinitronIsaSlashdot += scalableCycle;
+```
+
+Pars dapibus, amplexus urnam: remisit veniente adplicor in inque. **Sceptra** et
+**si lacrimasque** admonitu qui hausit longum contigerant neve, ut limina
+cedere. Abantiades fictos, amat inque Aglauros at sub age, Prytaninque.
+
+Comaeque dorso; octavo annum moventem sed; lignum regere in summa; vina erat,
+contra. Res ignoscas admovet **functi rediturum** ignea idque deferri, ferrumque
+et! Frustraque tam modo Macareus terrarumque adhuc, morae haec Acmona, prima
+agros iuvenes noctem, umbra, fratrum.
