--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -49,6 +49,7 @@
   "verifyMfaCodeError": "Ops! It looks like the code is not correct",
   "reauthenticate": "Reauthenticate",
   "reauthenticateDescription": "For security reasons, we need you to re-authenticate",
+  "errorAlertHeading": "Sorry, we could not authenticate you",
   "errors": {
     "auth/wrong-password": "The credentials entered are incorrect",
     "auth/user-disabled": "Your account has been disabled. Please contact Support.",
