--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,8 +15,9 @@
   "genericError": "Sorry, we hit an unexpected error",
   "genericErrorSubHeading": "We apologize for the inconvenience, but we hit an unexpected error. Please try again later.",
   "anonymousUser": "Anonymous",
-  "switchToLightTheme": "Switch to Light theme",
-  "switchToDarkTheme": "Switch to Dark theme",
+  "lightTheme": "Light",
+  "darkTheme": "Dark",
+  "systemTheme": "System",
   "expandSidebar": "Expand Sidebar",
   "collapseSidebar": "Collapse Sidebar",
   "documentation": "Documentation",
